[gd_scene load_steps=18 format=2]

[ext_resource path="res://scene/cubes.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/World.gd" type="Script" id=3]
[ext_resource path="res://scripts/frontal_camera.gd" type="Script" id=4]
[ext_resource path="res://scripts/isometric_camera.gd" type="Script" id=5]
[ext_resource path="res://scene/key.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/Tower.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/collision_fall.gd" type="Script" id=8]
[ext_resource path="res://scripts/text_key.gd" type="Script" id=9]
[ext_resource path="res://sprites/key.png" type="Texture" id=10]
[ext_resource path="res://sprites/heart_empty.png" type="Texture" id=11]
[ext_resource path="res://sprites/heart.png" type="Texture" id=12]
[ext_resource path="res://scripts/hearts.gd" type="Script" id=13]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.823529, 0.827451, 0.372549, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/PermanentMarker-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = SubResource( 2 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 39.8632, 1, 30.4973 )

[node name="World" type="Spatial"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="cubos" parent="." instance=ExtResource( 1 )]

[node name="cubos2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.9625, 0.139797, 0.662515 )

[node name="cubos3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.29638, 0.139797, 0.644444 )

[node name="cubos4" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.61363, 0.14, -1.65548 )

[node name="cubos5" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.28244, 0.14, -1.65548 )

[node name="cubos6" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.87418, 0.14, 0.496532 )

[node name="cubos7" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.62788, 0.14, -3.8862 )

[node name="cubos8" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.62788, 0.14, -6.16554 )

[node name="cubos9" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.27547, 0.14, -6.16554 )

[node name="cubos10" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.27547, 0.14, -8.38725 )

[node name="cubos11" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.27547, 0.14, -10.6416 )

[node name="cubos12" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.59521, 0.14, -10.6416 )

[node name="cubos13" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.88228, 0.14, -10.6416 )

[node name="cubos14" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.2381, 0.14, -10.6416 )

[node name="cubos21" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.219, 0.14, 0.511127 )

[node name="cubos15" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.5531, 0.14, -10.6416 )

[node name="cubos22" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.27547, 0.14, -12.9534 )

[node name="cubos23" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.59521, 0.14, -12.9534 )

[node name="cubos24" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.88228, 0.14, -12.9534 )

[node name="cubos25" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.2381, 0.14, -12.9534 )

[node name="cubos26" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.5531, 0.14, -12.9534 )

[node name="cubos27" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.27547, 0.14, -15.2277 )

[node name="cubos28" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.59521, 0.14, -15.2277 )

[node name="cubos29" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.88228, 0.14, -15.2277 )

[node name="cubos30" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.2381, 0.14, -15.2277 )

[node name="cubos31" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.5531, 0.14, -15.2277 )

[node name="cubos32" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.27547, 0.14, -17.5185 )

[node name="cubos33" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.59521, 0.14, -17.5185 )

[node name="cubos34" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.88228, 0.14, -17.5185 )

[node name="cubos35" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.2381, 0.14, -17.5185 )

[node name="cubos36" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.5531, 0.14, -17.5185 )

[node name="cubos16" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.553, 0.14, -8.387 )

[node name="cubos17" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.553, 0.14, -6.166 )

[node name="cubos18" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.553, 0.14, -3.866 )

[node name="cubos19" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.553, 0.14, -1.655 )

[node name="cubos20" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.553, 0.14, 0.497 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.754263, 0.656573, 0, -0.656573, 0.754263, -7.58622, 1.06347, 0 )
light_specular = 5.284
shadow_enabled = true
shadow_color = Color( 0.658824, 0.619608, 0.619608, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( -2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 0, 0.896292, 0 )
velocity = 10
jump = 5

[node name="isometric_camera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 7.10632, 14.0792, 9.45473 )
projection = 1
size = 10.0
far = 30.1
script = ExtResource( 5 )

[node name="frontal_camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.89013, 3.37769, 6.95908 )
projection = 1
fov = 104.4
size = 12.0
near = 0.03
script = ExtResource( 4 )

[node name="key" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.78923, 1.77524, -0.170784 )

[node name="Tower" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -10.3099, 0.915177, -15.9312 )

[node name="text_key" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="text_key"]
margin_left = 765.0
margin_top = 13.0
margin_right = 820.0
margin_bottom = 68.0
texture = ExtResource( 10 )
expand = true

[node name="text" type="Label3D" parent="text_key"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0676214, 8.56104, -20.5895 )
text = "xx"
font = SubResource( 3 )

[node name="hearts" type="CanvasLayer" parent="."]
script = ExtResource( 13 )

[node name="heart_empty" type="TextureRect" parent="hearts"]
margin_left = 768.0
margin_top = 67.0
margin_right = 2211.0
margin_bottom = 457.0
rect_scale = Vector2( 0.075, 0.075 )
rect_pivot_offset = Vector2( 1, 0 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="heart_full" type="TextureRect" parent="hearts"]
margin_left = 769.0
margin_top = 67.0
margin_right = 2212.0
margin_bottom = 457.0
rect_scale = Vector2( 0.075, 0.075 )
rect_pivot_offset = Vector2( 1, 0 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 2

[node name="collision_fall" type="Area" parent="." groups=["collision_fall"]]
script = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="collision_fall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.4508, -1.39725, -10.1348 )
shape = SubResource( 4 )

[connection signal="area_entered" from="collision_fall" to="collision_fall" method="_on_collision_fall_area_entered"]
